gcc/testsuite/g++.dg/other/error14.C
//PR c++/26269

void foo()
{
    i;          // { dg-error "not declared in this scope" }
    int i;
}
